# kota-rust-cli

./: .gitignore  CLAUDE.md  Cargo.toml  KOTA_AUDIT_REPORT.md  README.md  SIMPLIFICATION_SUMMARY.md  kota-rust-cli-bridge.md  new_file.md  prompts.toml  run_kota.sh  shared.md  test.sb
knowledge-base/: .gitignore  README.md
mcp/: AUTHENTICATION.md  CLAUDE_CODE_SETUP.md  README.md  USAGE_GUIDE.md  test-bidirectional-communication.sh  test-mcp-setup.sh
mcp/kota-mcp-server/: Cargo.toml  README.md  claude-code-binary-config.json  claude-code-config.json  run-mcp-server.sh
mcp/kota-mcp-server/src/: bridge_client.rs  main.rs  mcp_protocol.rs  tools.rs
mcp/rust-bridge-server/: AUTHENTICATION_FIX.md  Cargo.toml  README.md  run-bridge-server.sh  send_collaboration_response.sh
mcp/rust-bridge-server/mcp/rust-bridge-server/logs/: all-communications.jsonl  communications-2025-06-01.json  communications-2025-06-02.json
mcp/rust-bridge-server/src/: communication_logger.rs  mac_pro_client.rs  main.rs  server.rs
mcp/simple-bridge/: COMPARISON.md  README.md  bridge-old.sh  bridge.sh  kota-integration.sh  mcp-wrapper.sh  message-to-mac-agent.md  receive-old.sh  receive.sh  send.sh  setup.sh
prompts/: README.md  base_prompts.toml  code_understanding_prompts.toml  editing_prompts.toml  planning_prompts.toml  self_modification_prompts.toml
src/: .editor.rs.swp  bridge.rs  cli.rs  cmd_parser.rs  commands.rs  context.rs  dynamic_prompts.rs  editor.rs  file_browser.rs  input.rs  llm.rs  main.rs  main_old.rs  memory.rs  prompts.rs  sr_parser.rs  thinking.rs  tui.rs  tui_events.rs
src/agents/: code_agent.rs  manager.rs  mod.rs  planning_agent.rs  research_agent.rs  traits.rs
src/config/: mod.rs
src/security/: approval.rs  mod.rs  policy.rs  sandbox.rs  secure_executor.rs
src/tui/: app.rs  mod.rs  rendering.rs  tests.rs  types.rs  widgets.rs
