[package]
name = "kota-rust-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
regex = "1.10"
gemini-client-api = "3.7"
colored = "2.0"
termimad = "0.30"
indicatif = "0.17"
reedline = "0.39"
toml = "0.8"

[dev-dependencies]
tempfile = "3.8"
