[package]
name = "kota-rust-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time", "process"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
regex = "1.10"
gemini-client-api = "3.7"
colored = "2.0"
termimad = "0.30"
indicatif = "0.17"
reedline = "0.39"
toml = "0.8"
ratatui = { version = "0.29", features = ["crossterm"] }
crossterm = "0.28"
chrono = "0.4"
unicode-width = "0.2"
textwrap = "0.16"
hostname = "0.4"
whoami = "1.5"
async-trait = "0.1"
uuid = { version = "1.6", features = ["v4"] }

[dev-dependencies]
tempfile = "3.8"
